package dependency revision

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,8 +6,8 @@ export(monthmeans_era5)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,summarise_at)
-importFrom(netcdf4,nc_close)
-importFrom(netcdf4,nc_open)
-importFrom(netcdf4,ncatt_get)
-importFrom(netcdf4,ncvar_get)
+importFrom(ncdf4,nc_close)
+importFrom(ncdf4,nc_open)
+importFrom(ncdf4,ncatt_get)
+importFrom(ncdf4,ncvar_get)
 importFrom(rlist,list.rbind)
