magrittr pipe added to function imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(monthmeans_era5)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,summarise_at)
+importFrom(magrittr,"%>%")
 importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncatt_get)
