--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(extract_era5)
 export(monthmeans_era5)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
 importFrom(dplyr,summarise_at)
 importFrom(magrittr,"%>%")
 importFrom(ncdf4,nc_close)
