--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(collate_era5)
 export(extract_era5)
 export(monthmeans_era5)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,summarise_at)
 importFrom(magrittr,"%>%")
 importFrom(ncdf4,nc_close)
