--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,16 +2,30 @@
 
 export(collate_era5)
 export(extract_era5)
+export(get_CDS_era5)
 export(monthmeans_era5)
+export(remove_seasonal_cycle)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_at)
+importFrom(ecmwfr,wf_request)
+importFrom(ecmwfr,wf_set_key)
+importFrom(lubridate,isoweek)
+importFrom(lubridate,month)
+importFrom(lubridate,yday)
 importFrom(magrittr,"%>%")
 importFrom(ncdf4,nc_close)
 importFrom(ncdf4,nc_open)
 importFrom(ncdf4,ncatt_get)
 importFrom(ncdf4,ncvar_get)
+importFrom(purrr,map)
+importFrom(purrr,map_df)
 importFrom(rlist,list.rbind)
+importFrom(stringr,str_pad)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
