add yearly requests and pressure levels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,4 @@ importFrom(rlist,list.rbind)
 importFrom(stringr,str_pad)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(tools,file_ext)
